--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,11 +6,13 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "attrs>=24.2.0",
+    "openai>=1.59.4",
     "openai-whisper>=20240930",
     "result>=0.17.0",
     "rich-click>=1.8.5",
+    "tiutools>=0.4.1",
     "toml>=0.10.2",
-    "whisperx>=3.1.6",
+    "whisperx",
 ]
 [project.scripts]
 # commandline tool, installable
@@ -25,3 +27,6 @@ build-backend = "hatchling.build"
 dev = [
     "pytest>=8.3.4",
 ]
+
+[tool.uv.sources]
+tiutools = { path = "../tiutools", editable = true }
