--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "TranscribeTools"
-version = "0.4.2"
+version = "0.4.4"
 description = "Transcribe all .mp3 soundfiles in a folder"
 readme = "README.md"
 requires-python = ">=3.12"
@@ -8,11 +8,11 @@ dependencies = [
     "attrs>=24.2.0",
     "openai>=1.59.4",
     "openai-whisper>=20240930",
+    "pymsgbox>=1.0.9",
     "result>=0.17.0",
     "rich-click>=1.8.5",
     "tiutools>=0.4.1",
     "toml>=0.10.2",
-    "whisperx",
 ]
 [project.scripts]
 # commandline tool, installable
