after inserting 0.5.5 files from local backup

--- a/config.toml
+++ b/config.toml
@@ -1,2 +1,2 @@
-folder = "/Users/ncdegroot/Library/CloudStorage/OneDrive-Gedeeldebibliotheken-TilburgUniversity/Project - Reflective cafe - data"
+folder = "PosixPath('/Users/ncdegroot/workspace/TranscribeTools/tests')"
 model = "large"
