some changes on ws

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,7 @@ dependencies = [
     "toml>=0.10.2",
     "transformers>=4.49.0",
     "deepl>=1.21.1",
-
+    "keyring>=25.6.0",
 ]
 [project.scripts]
 # commandline tool, installable
